# mth

./: .gitignore  Makefile.am  README.md  configure.ac
src/: Makefile.am  makefile
src/core/: Makefile.am  coretypes.h  makefile  tabs.cpp  tabs.h  tadd.cpp  tadd.h  tatom.cpp  tatom.h  tbinary.cpp  tbinary.h  tconstant.cpp  tconstant.h  tderivatives0.cpp  tderivatives0.h  tdiv.cpp  tdiv.h  templates.cpp  tfmatrix.cpp  tfmatrix.h  tfmatrix0.cpp  tfmatrix0.h  tfog.cpp  tfog.h  tfunction0.cpp  tfunction0.h  tfunctions.cpp  tfunctions.h  tintegral.cpp  tintegral.h  tinterval.cpp  tinterval.h  tlinear.cpp  tlinear.h  tln.cpp  tln.h  tmathtools.cpp  tmathtools.h  tmul.cpp  tmul.h  (+31 more)
src/fit/: Makefile.am  fittypes.h  makefile  templates.cpp  testimator0.cpp  testimator0.h  tfit.cpp  tfit.h  tfitls.cpp  tfitls.h  tnowasher.cpp  tnowasher.h  tols.cpp  tols.h  twasher.cpp  twasher.h  twasher0.cpp  twasher0.h
src/misc/: Makefile.am  debug.cpp  debug.h  filetools.cpp  filetools.h  linkedlist.cpp  linkedlist.h  linkedlistpost.cpp  linkedlistpost.h  linkedptrlist.cpp  linkedptrlist.h  linkedptrlistpost.cpp  linkedptrlistpost.h  makefile  misctypes.h  option0.cpp  option0.h  options.cpp  options.h  polymorphic.h  rand.cpp  rand.h  randomtools.cpp  randomtools.h  stlstringtools.cpp  stlstringtools.h  teststlstringtools.cpp  texception.h  timetools.cpp  timetools.h  tnmcontainer.cpp  tnmcontainer.h  toption.cpp  toption.h  tpointerstack.cpp  tpointerstack.h  tptroption.cpp  tptroption.h
src/plot/: Makefile.am  makefile  templates.cpp  tplot.cpp  tplot.h
src/slatec/: Makefile  makefile  tslatecerror.cpp  tslatecerror.h  tslatecstack.cpp  tslatecstack.h  tslatectools.cpp  tslatectools.h
src/slatec/src/: Makefile
src/solvers/: Makefile.am  makefile  solvertypes.h  templates.cpp  tintervalstepper.cpp  tintervalstepper.h  tnsolver.cpp  tnsolver.h  tstepper.h
src/tests/: makefile
src/tests/core/: test_tln.cpp
src/tests/fit/: makefile  test_tols.cpp
src/tests/misc/: makefile  test_options.cpp  test_stlstringtools.cpp
src/tests/plot/: test_tplot.cpp
src/tests/solvers/: makefile  test_tnsolver.cpp
test/: Makefile.am  nakefile
test/core/: Makefile.am  nakefile
test/fit/: Makefile.am  nakefile  test_tfitls.cpp  test_tols.cpp
test/misc/: Makefile.am  test_options.cpp
test/plot/: Makefile.am  nakefile
test/solvers/: Makefile.am  test_tnsolver.cpp
